--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -93,7 +93,7 @@
         padding: 3rem 5rem;
 
         @include respond(tab-port){ 
-            padding: 3rem 3rem;
+            padding: 3rem 2.5rem;
         }
     }
 
